--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,19 @@
-ErrorDocument 404 /page-not-found.html
+# mod_rewrite starts here
+
+RewriteEngine on
+
+# does not apply to exisiting directories, meaning that if the folder exists on the server then don't change anything and don't run the Rule!
+
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# Check for file in directory with.html extension
+
+RewriteCond %{REQUEST_FILENAME}\.html -f
+
+
+# Here we show the page that has the .html extension
+
+RewriteRule ^(.*)$ $1.html [NC,L]
+
+
+ErrorDocument 404 /firstviewlettings-web-build/page-not-found.html
